--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -121,6 +121,73 @@ main {
 .info-description {
     font-weight: 700;
     font-size: 20px;
-    color: #757575;
+    color: #474747;
 
 }
+
+/* What i do section */
+
+.section-skills-container {
+    margin-top: 130px;
+}
+
+.section-skills-title {
+    text-align: center;
+    font-weight: 700;
+    font-size: 35px;
+}
+
+.section-skills-description {
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-weight: 400;
+    font-size: 18px;
+    color: #757575;
+}
+
+/* Skills Section */
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+
+}
+
+.section-skills-container {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+}
+
+/* contact styles */
+.contact {
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+
+.contact .section-title {
+    text-align: left;
+}
+.contact .section-description {
+    font-weight: 400;
+    font-size: 16px;
+    margin-bottom: 30px;
+}
+
+.contact input[type="text"],
+input[type="email"],
+textarea {
+    margin-bottom: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+
+.contact a {
+    text-decoration: none;
+    margin-right: 24px;
+}
+
